--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -21,27 +21,36 @@
         width: 100%;
         text-transform: uppercase;
         margin-top: 3rem;
+        transition: all .5s;
 
-        &.disabled {
+        &:hover {
+            background-color: #9FE8DF;
+            transform: scale(1.01);
+        }
+
+        &:active {
+            background-color: $cyan;
+            transform: scale(1);
+        }
+
+        @include for-large-screens {
+            padding: 1.5rem 0;
+        }
+
+        &:disabled {
             opacity: .2;
-            ;
+            cursor: not-allowed;
             user-select: none;
+
+            &:hover,
+            &:active {
+                background-color: $cyan;
+                transform: none;
+            }
         }
     }
 
     &-tip {
         width: 11.5rem;
-    }
-
-    &-custom {
-        background-color: $Light-grayish-cyan;
-        color: $Dark-grayish-cyan-2;
-        text-align: right;
-        font-size: 2rem;
-        font-family: $main-font;
-        font-weight: 700;
-        width: 11.5rem;
-        padding: .6rem 1rem .6rem 0;
-
     }
 }
