--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -10,6 +10,7 @@ $body-bg-color: #c5e4e7;
 
 $warning-color: #c91e1e;
 $cyan: hsl(172, 67%, 45%);
+$hover-cyan: #9FE8DF;
 
 // Neutral
 $Very-dark-cyan: hsl(183, 100%, 15%);
