--- a/scss/components/_inputs.scss
+++ b/scss/components/_inputs.scss
@@ -78,8 +78,13 @@
     }
 
     &-custom {
+        @extend .btn;
         @extend .input__field;
         width: 11.5rem;
         padding: .6rem 1rem .6rem 0;
+
+        &:hover{
+            background-color: $Light-grayish-cyan;
+        }
     }
 }
